[metadata]
name = importas
version = 0.1.0
author = manderj
author_email = joffrey.mander@gmail.com
license = Proprietary
description = Refactor imports
keyword = tools development
url = https://github.com/manderj/importas
long_description = file: README.rst
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    parso
include_package_data = True
extra_requires =
  dev =
    black
    ipdb
    isort
    pylint
    pytest

[options.entry_points]
console_scripts =
    importas = src.importas:main
